# FlashRT

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  USAGE.md  pyproject.toml  setup.py
csrc/: bindings.cpp  fa2_bindings.cpp  fp4_bindings.cpp
docker/: Dockerfile  Dockerfile.thor  README.md
docs/: BUILDING_WINDOWS.md  INSTALL.md  adding_new_model.md  architecture.md  calibration.md  cfg_correctness_spec.md  deployment_rtx4090.md  inference_engine_differences.md  kernel_catalog.md  kernel_fusion.md  optimization-details.md  plugin_model_template.md  precision_spec.md  qwen36_nvfp4.md  qwen36_usage.md  rl_inference.md  stable_api.md
examples/: README.md  quickstart.py  qwen36_openai_server.py  server.py
flash_rt/: __init__.py  api.py
flash_vla/: __init__.py
tests/: _groot_n17_runner.py  bench_p1_quickstart.py  bench_pi05_thor_views.py  bench_thor_calibration_vs_ref.py  eval_libero_fp4.py  profile_fp4_awq_audit.py  profile_fp4_vs_fp8_layer.py  test_all_models_precision.py  test_calibration_helpers.py  test_cfg_correctness_oracle.py  test_dataset_calibration_rtx.py  test_fp4_ab_normal.py  test_fp4_canary.py  test_fp4_integration_meta.py  test_groot_calibrate_rtx.py  test_groot_n17_attn_backend.py  test_groot_n17_calibration.py  test_groot_n17_e2e.py  test_groot_n17_latency.py  test_groot_n17_precision.py  test_groot_n17_weight_loader.py  test_install_smoke.py  test_norm_stats_adapter.py  test_p1_split_gu.py  test_p8_awq_inplace.py  test_pi05_batched_inference.py  test_pi05_batched_precision.py  test_pi05_cfg_batched_inference.py  test_pi0fast_precision.py  (+12 more)
(+236 files in other folders)
